Fixed bug where TextButton was centering its text on wrap to next line

--- a/src/app/components/TextButton/index.module.scss
+++ b/src/app/components/TextButton/index.module.scss
@@ -15,4 +15,5 @@
 
   min-width: auto;
   user-select: text;
+  text-align: left;
 }
